Adicionando sistemas de implementação geral'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,10 @@
         <a href="LutadoresJSON">
             <li>Visualizar dados como JSON</li>
         </a>
+
+        <a href="cadastro">
+            <li>Cadastrar lutador</li>
+        </a>
     </ul>
 </body>
 </html>
